feat: 添加数据统计功能 - 仓库识别和干员识别
- 新增数据统计页面，支持仓库物品和干员识别
- 添加干员筛选功能（星级、职业、精英化、潜能、拥有状态）
- 添加干员排序功能（等级、星级、潜能）
- 支持显示未拥有干员（从 battle_data.json 获取完整干员列表）
- 添加干员头像显示，支持异格干员
- 添加物品图标显示，通过后端代理获取图片
- 使用标签页切换干员识别和仓库识别
- 添加骨架屏加载动画
- 移动端适配：筛选按钮和干员卡片均为一行3个
- 后端新增数据解析服务，从 MAA 日志提取识别结果
- 后端新增图片代理接口，支持干员头像和物品图标
- Vite 配置添加代理，支持手机端访问

--- a/server/data/user-configs/automation-tasks.json
+++ b/server/data/user-configs/automation-tasks.json
@@ -12,7 +12,8 @@
       "params": {
         "clientType": "Official",
         "adbPath": "/opt/homebrew/bin/adb",
-        "address": "192.168.50.103:16384"
+        "address": "192.168.50.103:16384",
+        "accountName": ""
       },
       "enabled": true,
       "commandId": "startup"
@@ -40,7 +41,8 @@
           "HD-7",
           "CE-6",
           "AP-5"
-        ]
+        ],
+        "expiringMedicine": "99"
       },
       "enabled": true,
       "commandId": "fight"
