security: 修复 Token 泄露问题并优化项目
- 🔒 安全修复：更新 .gitignore 排除所有用户配置文件
- 🔒 安全修复：从 Git 中删除已提交的敏感配置文件
- 🔒 安全修复：添加配置文件示例供参考
- 🐳 Docker 支持：添加完整的 Docker 部署方案
- 🧹 代码清理：删除冗余文件和代码
- 📝 文档更新：简化 README，删除冗余文档
- 🐛 Bug 修复：修复多个功能问题（终止任务、剿灭跳过等）
- ⚡ 性能优化：优化前端 API 调用和端口配置

--- a/.gitignore
+++ b/.gitignore
@@ -9,6 +9,8 @@ dist
 .kiro/
 .vscode/
 
-# 数据文件（保留目录结构）
-server/data/*.json
-!server/data/user-configs/
+# 用户配置和数据（包含敏感信息，不要提交）
+server/data/
+
+# Docker 数据目录
+docker-data/
