feat: 添加森空岛集成和Dashboard控制台
- 新增森空岛账号登录和数据获取功能
- 新增Dashboard控制台页面，显示实时游戏数据
- 添加游戏资源和关卡数据服务
- 优化项目结构，删除临时文档和测试脚本
- 更新.gitignore和.dockerignore，排除study文件夹

--- a/server/package.json
+++ b/server/package.json
@@ -7,7 +7,9 @@
     "start": "node server.js",
     "fetch-materials": "node scripts/fetch-operator-materials.js",
     "fetch-formulas": "node scripts/fetch-material-formulas.js && node scripts/merge-formulas.js",
-    "fetch-all-materials": "node scripts/fetch-all-materials.js"
+    "fetch-all-materials": "node scripts/fetch-all-materials.js",
+    "fetch-stages": "node scripts/fetch-stage-data.js",
+    "fetch-assets": "node scripts/fetch-game-assets.js"
   },
   "dependencies": {
     "cors": "^2.8.5",
